dlpy/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt_list stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> simple_stmt
Rule 5     stmt -> compound_stmt
Rule 6     compound_stmt -> if_stmt
Rule 7     compound_stmt -> while_stmt
Rule 8     compound_stmt -> funcdef_stmt
Rule 9     compound_stmt -> print
Rule 10    simple_stmt -> small_stmt SEMICOLON
Rule 11    small_stmt -> test
Rule 12    small_stmt -> flow_stmt
Rule 13    small_stmt -> dl_stmt
Rule 14    small_stmt -> assign_expr
Rule 15    print -> PRINT LPAREN small_stmt RPAREN SEMICOLON
Rule 16    dl_stmt -> train_stmt
Rule 17    dl_stmt -> pred_stmt
Rule 18    dl_stmt -> save_stmt
Rule 19    train_stmt -> TRAIN name list_expr
Rule 20    pred_stmt -> PRED name STRING
Rule 21    save_stmt -> SAVE name STRING
Rule 22    flow_stmt -> RETURN
Rule 23    flow_stmt -> RETURN list_expr
Rule 24    flow_stmt -> BREAK
Rule 25    flow_stmt -> CONTINUE
Rule 26    while_stmt -> WHILE test suite
Rule 27    while_stmt -> WHILE test suite ELSE suite
Rule 28    if_stmt -> IF test suite
Rule 29    if_stmt -> IF test suite ELSE suite
Rule 30    funcdef_stmt -> DEF name LPAREN list_expr RPAREN suite
Rule 31    suite -> simple_stmt
Rule 32    suite -> LBRACK stmt_list RBRACK
Rule 33    test -> comparison OR test
Rule 34    test -> comparison AND test
Rule 35    test -> comparison
Rule 36    comparison -> expr GT expr
Rule 37    comparison -> expr LT expr
Rule 38    comparison -> expr GTE expr
Rule 39    comparison -> expr LTE expr
Rule 40    comparison -> expr EQ expr
Rule 41    comparison -> expr NEQ expr
Rule 42    comparison -> expr
Rule 43    basic_type -> INT_TYPE
Rule 44    basic_type -> FLOAT_TYPE
Rule 45    basic_type -> LIST_TYPE
Rule 46    basic_type -> TUPLE_TYPE
Rule 47    basic_type -> MLP
Rule 48    basic_type -> TRANSFORMER
Rule 49    assign_expr -> NAME ASSIGN expr
Rule 50    assign_expr -> NAME COLON basic_type ASSIGN expr
Rule 51    assign_expr -> NAME COLON basic_type ASSIGN STRING COLON STRING
Rule 52    assign_expr -> NAME COLON basic_type ASSIGN list_expr COLON STRING
Rule 53    expr -> expr PLUS expr
Rule 54    expr -> expr MINUS expr
Rule 55    expr -> expr TIMES expr
Rule 56    expr -> expr DIVIDE expr
Rule 57    expr -> expr MOD expr
Rule 58    expr -> factor
Rule 59    factor -> PLUS factor
Rule 60    factor -> MINUS factor
Rule 61    factor -> atom_expr
Rule 62    atom_expr -> <empty>
Rule 63    atom_expr -> atom
Rule 64    atom_expr -> atom_expr LSQBRACK expr RSQBRACK
Rule 65    atom_expr -> name LPAREN list_expr RPAREN
Rule 66    atom -> LPAREN list_expr RPAREN
Rule 67    atom -> LSQBRACK list_expr RSQBRACK
Rule 68    atom -> name
Rule 69    atom -> number
Rule 70    atom -> string
Rule 71    atom -> TRUE
Rule 72    atom -> FALSE
Rule 73    atom -> NONE
Rule 74    atom -> name LSQBRACK atom RSQBRACK
Rule 75    list_expr -> list_expr COMMA expr
Rule 76    list_expr -> expr
Rule 77    name -> NAME
Rule 78    number -> INT
Rule 79    number -> FLOAT
Rule 80    string -> STRING

Terminals, with rules where they appear

AND                  : 34
ASSIGN               : 49 50 51 52
BREAK                : 24
COLON                : 50 51 51 52 52
COMMA                : 75
CONTINUE             : 25
DEF                  : 30
DIVIDE               : 56
ELSE                 : 27 29
EQ                   : 40
FALSE                : 72
FLOAT                : 79
FLOAT_TYPE           : 44
GT                   : 36
GTE                  : 38
IF                   : 28 29
INT                  : 78
INT_TYPE             : 43
LBRACK               : 32
LIST_TYPE            : 45
LPAREN               : 15 30 65 66
LSQBRACK             : 64 67 74
LT                   : 37
LTE                  : 39
MINUS                : 54 60
MLP                  : 47
MOD                  : 57
NAME                 : 49 50 51 52 77
NEQ                  : 41
NONE                 : 73
OR                   : 33
PLUS                 : 53 59
PRED                 : 20
PRINT                : 15
RBRACK               : 32
RETURN               : 22 23
RPAREN               : 15 30 65 66
RSQBRACK             : 64 67 74
SAVE                 : 21
SEMICOLON            : 10 15
STRING               : 20 21 51 51 52 80
TIMES                : 55
TRAIN                : 19
TRANSFORMER          : 48
TRUE                 : 71
TUPLE_TYPE           : 46
WHILE                : 26 27
error                : 

Nonterminals, with rules where they appear

assign_expr          : 14
atom                 : 63 74
atom_expr            : 61 64
basic_type           : 50 51 52
comparison           : 33 34 35
compound_stmt        : 5
dl_stmt              : 13
expr                 : 36 36 37 37 38 38 39 39 40 40 41 41 42 49 50 53 53 54 54 55 55 56 56 57 57 64 75 76
factor               : 58 59 60
flow_stmt            : 12
funcdef_stmt         : 8
if_stmt              : 6
list_expr            : 19 23 30 52 65 66 67 75
name                 : 19 20 21 30 65 68 74
number               : 69
pred_stmt            : 17
print                : 9
program              : 0
save_stmt            : 18
simple_stmt          : 4 31
small_stmt           : 10 15
stmt                 : 2 3
stmt_list            : 1 2 32
string               : 70
suite                : 26 27 27 28 29 29 30
test                 : 11 26 27 28 29 33 34
train_stmt           : 16
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt_list stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (10) simple_stmt -> . small_stmt SEMICOLON
    (6) compound_stmt -> . if_stmt
    (7) compound_stmt -> . while_stmt
    (8) compound_stmt -> . funcdef_stmt
    (9) compound_stmt -> . print
    (11) small_stmt -> . test
    (12) small_stmt -> . flow_stmt
    (13) small_stmt -> . dl_stmt
    (14) small_stmt -> . assign_expr
    (28) if_stmt -> . IF test suite
    (29) if_stmt -> . IF test suite ELSE suite
    (26) while_stmt -> . WHILE test suite
    (27) while_stmt -> . WHILE test suite ELSE suite
    (30) funcdef_stmt -> . DEF name LPAREN list_expr RPAREN suite
    (15) print -> . PRINT LPAREN small_stmt RPAREN SEMICOLON
    (33) test -> . comparison OR test
    (34) test -> . comparison AND test
    (35) test -> . comparison
    (22) flow_stmt -> . RETURN
    (23) flow_stmt -> . RETURN list_expr
    (24) flow_stmt -> . BREAK
    (25) flow_stmt -> . CONTINUE
    (16) dl_stmt -> . train_stmt
    (17) dl_stmt -> . pred_stmt
    (18) dl_stmt -> . save_stmt
    (49) assign_expr -> . NAME ASSIGN expr
    (50) assign_expr -> . NAME COLON basic_type ASSIGN expr
    (51) assign_expr -> . NAME COLON basic_type ASSIGN STRING COLON STRING
    (52) assign_expr -> . NAME COLON basic_type ASSIGN list_expr COLON STRING
    (36) comparison -> . expr GT expr
    (37) comparison -> . expr LT expr
    (38) comparison -> . expr GTE expr
    (39) comparison -> . expr LTE expr
    (40) comparison -> . expr EQ expr
    (41) comparison -> . expr NEQ expr
    (42) comparison -> . expr
    (19) train_stmt -> . TRAIN name list_expr
    (20) pred_stmt -> . PRED name STRING
    (21) save_stmt -> . SAVE name STRING
    (53) expr -> . expr PLUS expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr TIMES expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr MOD expr
    (58) expr -> . factor
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . atom_expr
    (62) atom_expr -> .
    (63) atom_expr -> . atom
    (64) atom_expr -> . atom_expr LSQBRACK expr RSQBRACK
    (65) atom_expr -> . name LPAREN list_expr RPAREN
    (66) atom -> . LPAREN list_expr RPAREN
    (67) atom -> . LSQBRACK list_expr RSQBRACK
    (68) atom -> . name
    (69) atom -> . number
    (70) atom -> . string
    (71) atom -> . TRUE
    (72) atom -> . FALSE
    (73) atom -> . NONE
    (74) atom -> . name LSQBRACK atom RSQBRACK
    (77) name -> . NAME
    (78) number -> . INT
    (79) number -> . FLOAT
    (80) string -> . STRING

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LSQBRACK resolved as shift
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    DEF             shift and go to state 17
    PRINT           shift and go to state 20
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    NAME            shift and go to state 28
    TRAIN           shift and go to state 31
    PRED            shift and go to state 32
    SAVE            shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    GT              reduce using rule 62 (atom_expr -> .)
    LT              reduce using rule 62 (atom_expr -> .)
    GTE             reduce using rule 62 (atom_expr -> .)
    LTE             reduce using rule 62 (atom_expr -> .)
    EQ              reduce using rule 62 (atom_expr -> .)
    NEQ             reduce using rule 62 (atom_expr -> .)
    TIMES           reduce using rule 62 (atom_expr -> .)
    DIVIDE          reduce using rule 62 (atom_expr -> .)
    MOD             reduce using rule 62 (atom_expr -> .)
    OR              reduce using rule 62 (atom_expr -> .)
    AND             reduce using rule 62 (atom_expr -> .)
    SEMICOLON       reduce using rule 62 (atom_expr -> .)
    LPAREN          shift and go to state 19
    LSQBRACK        shift and go to state 39
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NONE            shift and go to state 44
    INT             shift and go to state 45
    FLOAT           shift and go to state 46
    STRING          shift and go to state 30

  ! LSQBRACK        [ reduce using rule 62 (atom_expr -> .) ]
  ! PLUS            [ reduce using rule 62 (atom_expr -> .) ]
  ! MINUS           [ reduce using rule 62 (atom_expr -> .) ]

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    simple_stmt                    shift and go to state 4
    compound_stmt                  shift and go to state 5
    small_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8
    funcdef_stmt                   shift and go to state 9
    print                          shift and go to state 10
    test                           shift and go to state 11
    flow_stmt                      shift and go to state 12
    dl_stmt                        shift and go to state 13
    assign_expr                    shift and go to state 14
    name                           shift and go to state 18
    comparison                     shift and go to state 21
    train_stmt                     shift and go to state 25
    pred_stmt                      shift and go to state 26
    save_stmt                      shift and go to state 27
    expr                           shift and go to state 29
    factor                         shift and go to state 36
    atom_expr                      shift and go to state 37
    atom                           shift and go to state 38
    number                         shift and go to state 40
    string                         shift and go to state 41

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (2) stmt_list -> stmt_list . stmt
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (10) simple_stmt -> . small_stmt SEMICOLON
    (6) compound_stmt -> . if_stmt
    (7) compound_stmt -> . while_stmt
    (8) compound_stmt -> . funcdef_stmt
    (9) compound_stmt -> . print
    (11) small_stmt -> . test
    (12) small_stmt -> . flow_stmt
    (13) small_stmt -> . dl_stmt
    (14) small_stmt -> . assign_expr
    (28) if_stmt -> . IF test suite
    (29) if_stmt -> . IF test suite ELSE suite
    (26) while_stmt -> . WHILE test suite
    (27) while_stmt -> . WHILE test suite ELSE suite
    (30) funcdef_stmt -> . DEF name LPAREN list_expr RPAREN suite
    (15) print -> . PRINT LPAREN small_stmt RPAREN SEMICOLON
    (33) test -> . comparison OR test
    (34) test -> . comparison AND test
    (35) test -> . comparison
    (22) flow_stmt -> . RETURN
    (23) flow_stmt -> . RETURN list_expr
    (24) flow_stmt -> . BREAK
    (25) flow_stmt -> . CONTINUE
    (16) dl_stmt -> . train_stmt
    (17) dl_stmt -> . pred_stmt
    (18) dl_stmt -> . save_stmt
    (49) assign_expr -> . NAME ASSIGN expr
    (50) assign_expr -> . NAME COLON basic_type ASSIGN expr
    (51) assign_expr -> . NAME COLON basic_type ASSIGN STRING COLON STRING
    (52) assign_expr -> . NAME COLON basic_type ASSIGN list_expr COLON STRING
    (36) comparison -> . expr GT expr
    (37) comparison -> . expr LT expr
    (38) comparison -> . expr GTE expr
    (39) comparison -> . expr LTE expr
    (40) comparison -> . expr EQ expr
    (41) comparison -> . expr NEQ expr
    (42) comparison -> . expr
    (19) train_stmt -> . TRAIN name list_expr
    (20) pred_stmt -> . PRED name STRING
    (21) save_stmt -> . SAVE name STRING
    (53) expr -> . expr PLUS expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr TIMES expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr MOD expr
    (58) expr -> . factor
    (59) factor -> . PLUS factor
    (60) factor -> . MINUS factor
    (61) factor -> . atom_expr
    (62) atom_expr -> .
    (63) atom_expr -> . atom
    (64) atom_expr -> . atom_expr LSQBRACK expr RSQBRACK
    (65) atom_expr -> . name LPAREN list_expr RPAREN
    (66) atom -> . LPAREN list_expr RPAREN
    (67) atom -> . LSQBRACK list_expr RSQBRACK
    (68) atom -> . name
    (69) atom -> . number
    (70) atom -> . string
    (71) atom -> . TRUE
    (72) atom -> . FALSE
    (73) atom -> . NONE
    (74) atom -> . name LSQBRACK atom RSQBRACK
    (77) name -> . NAME
    (78) number -> . INT
    (79) number -> . FLOAT
    (80) string -> . STRING

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LSQBRACK resolved as shift
    $end            reduce using rule 1 (program -> stmt_list .)
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    DEF             shift and go to state 17
    PRINT           shift and go to state 20
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    NAME            shift and go to state 28
    TRAIN           shift and go to state 31
    PRED            shift and go to state 32
    SAVE            shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    GT              reduce using rule 62 (atom_expr -> .)
    LT              reduce using rule 62 (atom_expr -> .)
    GTE             reduce using rule 62 (atom_expr -> .)
    LTE             reduce using rule 62 (atom_expr -> .)
    EQ              reduce using rule 62 (atom_expr -> .)
    NEQ             reduce using rule 62 (atom_expr -> .)
    TIMES           reduce using rule 62 (atom_expr -> .)
    DIVIDE          reduce using rule 62 (atom_expr -> .)
    MOD             reduce using rule 62 (atom_expr -> .)
    OR              reduce using rule 62 (atom_expr -> .)
    AND             reduce using rule 62 (atom_expr -> .)
    SEMICOLON       reduce using rule 62 (atom_expr -> .)
    LPAREN          shift and go to state 19
    LSQBRACK        shift and go to state 39
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NONE            shift and go to state 44
    INT             shift and go to state 45
    FLOAT           shift and go to state 46
    STRING          shift and go to state 30

  ! LSQBRACK        [ reduce using rule 62 (atom_expr -> .) ]
  ! PLUS            [ reduce using rule 62 (atom_expr -> .) ]
  ! MINUS           [ reduce using rule 62 (atom_expr -> .) ]

    stmt                           shift and go to state 47
    simple_stmt                    shift and go to state 4
    compound_stmt                  shift and go to state 5
    small_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8
    funcdef_stmt                   shift and go to state 9
    print                          shift and go to state 10
    test                           shift and go to state 11
    flow_stmt                      shift and go to state 12
    dl_stmt                        shift and go to state 13
    assign_expr                    shift and go to state 14
    name                           shift and go to state 18
    comparison                     shift and go to state 21
    train_stmt                     shift and go to state 25
    pred_stmt                      shift and go to state 26
    save_stmt                      shift and go to state 27
    expr                           shift and go to state 29
    factor                         shift and go to state 36
    atom_expr                      shift and go to state 37
    atom                           shift and go to state 38
    number                         shift and go to state 40
    string                         shift and go to state 41

state 3

    (3) stmt_list -> stmt .

    IF              reduce using rule 3 (stmt_list -> stmt .)
    WHILE           reduce using rule 3 (stmt_list -> stmt .)
    DEF             reduce using rule 3 (stmt_list -> stmt .)
    PRINT           reduce using rule 3 (stmt_list -> stmt .)
    RETURN          reduce using rule 3 (stmt_list -> stmt .)
    BREAK           reduce using rule 3 (stmt_list -> stmt .)
    CONTINUE        reduce using rule 3 (stmt_list -> stmt .)
    NAME            reduce using rule 3 (stmt_list -> stmt .)
    TRAIN           reduce using rule 3 (stmt_list -> stmt .)
    PRED            reduce using rule 3 (stmt_list -> stmt .)
    SAVE            reduce using rule 3 (stmt_list -> stmt .)
    PLUS            reduce using rule 3 (stmt_list -> stmt .)
    MINUS           reduce using rule 3 (stmt_list -> stmt .)
    LPAREN          reduce using rule 3 (stmt_list -> stmt .)
    LSQBRACK        reduce using rule 3 (stmt_list -> stmt .)
    TRUE            reduce using rule 3 (stmt_list -> stmt .)
    FALSE           reduce using rule 3 (stmt_list -> stmt .)
    NONE            reduce using rule 3 (stmt_list -> stmt .)
    INT             reduce using rule 3 (stmt_list -> stmt .)
    FLOAT           reduce using rule 3 (stmt_list -> stmt .)
    STRING          reduce using rule 3 (stmt_list -> stmt .)
    SEMICOLON       reduce using rule 3 (stmt_list -> stmt .)
    OR              reduce using rule 3 (stmt_list -> stmt .)
    AND             reduce using rule 3 (stmt_list -> stmt .)
    GT              reduce using rule 3 (stmt_list -> stmt .)
    LT              reduce using rule 3 (stmt_list -> stmt .)
    GTE             reduce using rule 3 (stmt_list -> stmt .)
    LTE             reduce using rule 3 (stmt_list -> stmt .)
    EQ              reduce using rule 3 (stmt_list -> stmt .)
    NEQ             reduce using rule 3 (stmt_list -> stmt .)
    TIMES           reduce using rule 3 (stmt_list -> stmt .)
    DIVIDE          reduce using rule 3 (stmt_list -> stmt .)
    MOD             reduce using rule 3 (stmt_list -> stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt .)
    RBRACK          reduce using rule 3 (stmt_list -> stmt .)


state 4

    (4) stmt -> simple_stmt .

    IF              reduce using rule 4 (stmt -> simple_stmt .)
    WHILE           reduce using rule 4 (stmt -> simple_stmt .)
    DEF             reduce using rule 4 (stmt -> simple_stmt .)
    PRINT           reduce using rule 4 (stmt -> simple_stmt .)
    RETURN          reduce using rule 4 (stmt -> simple_stmt .)
    BREAK           reduce using rule 4 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 4 (stmt -> simple_stmt .)
    NAME            reduce using rule 4 (stmt -> simple_stmt .)
    TRAIN           reduce using rule 4 (stmt -> simple_stmt .)
    PRED            reduce using rule 4 (stmt -> simple_stmt .)
    SAVE            reduce using rule 4 (stmt -> simple_stmt .)
    PLUS            reduce using rule 4 (stmt -> simple_stmt .)
    MINUS           reduce using rule 4 (stmt -> simple_stmt .)
    LPAREN          reduce using rule 4 (stmt -> simple_stmt .)
    LSQBRACK        reduce using rule 4 (stmt -> simple_stmt .)
    TRUE            reduce using rule 4 (stmt -> simple_stmt .)
    FALSE           reduce using rule 4 (stmt -> simple_stmt .)
    NONE            reduce using rule 4 (stmt -> simple_stmt .)
    INT             reduce using rule 4 (stmt -> simple_stmt .)
    FLOAT           reduce using rule 4 (stmt -> simple_stmt .)
    STRING          reduce using rule 4 (stmt -> simple_stmt .)
    SEMICOLON       reduce using rule 4 (stmt -> simple_stmt .)
    OR              reduce using rule 4 (stmt -> simple_stmt .)
    AND             reduce using rule 4 (stmt -> simple_stmt .)
    GT              reduce using rule 4 (stmt -> simple_stmt .)
    LT              reduce using rule 4 (stmt -> simple_stmt .)
    GTE             reduce using rule 4 (stmt -> simple_stmt .)
    LTE             reduce using rule 4 (stmt -> simple_stmt .)
    EQ              reduce using rule 4 (stmt -> simple_stmt .)
    NEQ             reduce using rule 4 (stmt -> simple_stmt .)
    TIMES           reduce using rule 4 (stmt -> simple_stmt .)
    DIVIDE          reduce using rule 4 (stmt -> simple_stmt .)
    MOD             reduce using rule 4 (stmt -> simple_stmt .)
    $end            reduce using rule 4 (stmt -> simple_stmt .)
    RBRACK          reduce using rule 4 (stmt -> simple_stmt .)


state 5

    (5) stmt -> compound_stmt .

    IF              reduce using rule 5 (stmt -> compound_stmt .)
    WHILE           reduce using rule 5 (stmt -> compound_stmt .)
    DEF             reduce using rule 5 (stmt -> compound_stmt .)
    PRINT           reduce using rule 5 (stmt -> compound_stmt .)
    RETURN          reduce using rule 5 (stmt -> compound_stmt .)
    BREAK           reduce using rule 5 (stmt -> compound_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> compound_stmt .)
    NAME            reduce using rule 5 (stmt -> compound_stmt .)
    TRAIN           reduce using rule 5 (stmt -> compound_stmt .)
    PRED            reduce using rule 5 (stmt -> compound_stmt .)
    SAVE            reduce using rule 5 (stmt -> compound_stmt .)
    PLUS            reduce using rule 5 (stmt -> compound_stmt .)
    MINUS           reduce using rule 5 (stmt -> compound_stmt .)
    LPAREN          reduce using rule 5 (stmt -> compound_stmt .)
    LSQBRACK        reduce using rule 5 (stmt -> compound_stmt .)
    TRUE            reduce using rule 5 (stmt -> compound_stmt .)
    FALSE           reduce using rule 5 (stmt -> compound_stmt .)
    NONE            reduce using rule 5 (stmt -> compound_stmt .)
    INT             reduce using rule 5 (stmt -> compound_stmt .)
    FLOAT           reduce using rule 5 (stmt -> compound_stmt .)
    STRING          reduce using rule 5 (stmt -> compound_stmt .)
    SEMICOLON       reduce using rule 5 (stmt -> compound_stmt .)
    OR              reduce using rule 5 (stmt -> compound_stmt .)
    AND             reduce using rule 5 (stmt -> compound_stmt .)
    GT              reduce using rule 5 (stmt -> compound_stmt .)
    LT              reduce using rule 5 (stmt -> compound_stmt .)
    GTE             reduce using rule 5 (stmt -> compound_stmt .)
    LTE             reduce using rule 5 (stmt -> compound_stmt .)
    EQ              reduce using rule 5 (stmt -> compound_stmt .)
    NEQ             reduce using rule 5 (stmt -> compound_stmt .)
    TIMES           reduce using rule 5 (stmt -> compound_stmt .)
    DIVIDE          reduce using rule 5 (stmt -> compound_stmt .)
    MOD             reduce using rule 5 (stmt -> compound_stmt .)
    $end            reduce using rule 5 (stmt -> compound_stmt .)
    RBRACK          reduce using rule 5 (stmt -> compound_stmt .)


state 6

    (10) simple_stmt -> small_stmt . SEMICOLON

    SEMICOLON       shift and go to state 48


state 7

    (6) compound_stmt -> if_stmt .
